traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:12: error: not found: value string
    writeMessage(string(i));
                 ^TraversalZigZag:12: error: not found: value i
    writeMessage(string(i));
                        ^TraversalZigZag:21: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
      y + = 1;
        ^